Reduced complexity of various methods and renames some variables